# SEER_PEPH

./: pyproject.toml
configs/: JointAnalysisConfig.json  SurvivalAnalysisConfig.json  TreatmentAnalysisConfig.json
data/: joint_ttt_survival_dataset.csv
docs/: County_Demo_Workflow_Grant_Prep_Pipeline.md  DEVELOPER_GUIDE.md  DEVELOPER_GUIDE_v2.Rmd  DEVELOPER_GUIDE_v3.md  DEVELOPER_GUIDE_v4.md  SEER_PEPH_Roadmap_Applications_Paper.md  WORKFLOW_GUIDE.Rmd
scripts/: run_joint_analysis.py  run_joint_analysis_smoke_test.py  run_joint_spatial_treatment_survival.py  run_joint_spatial_treatment_survival_multi_seed.py  run_joint_validation_seed.py  run_joint_validation_seed_diagnostics.py  run_joint_validation_study.py  run_joint_validation_study_diagnostics.py  run_survival_analysis.py  run_survival_only_multi_seed_recovery.py  run_survival_only_recovery.py  run_survival_spatial_delta_only_multi_seed_recovery.py  run_survival_spatial_delta_only_recovery.py  run_survival_spatial_delta_only_recovery_null.py  run_survival_spatial_delta_only_recovery_null_multi_seed.py  run_treatment_analysis.py  run_treatment_spatial_pe_recovery.py  run_treatment_spatial_pe_recovery_multi_seed.py
tests/: test_extract.py  test_extract_smoke.py  test_fit_io.py  test_fit_models.py  test_fit_models_smoke.py  test_graphs.py  test_model_data.py  test_predict_survival.py  test_predict_survival_smoke.py  test_prep.py  test_run_inference.py  test_run_joint_analysis_cli_smoke.py  test_run_joint_analysis_smoke.py  test_run_survival_analysis_breaks_pass_through.py  test_run_survival_analysis_cli_smoke.py  (+6 more)
(+45 files in other folders)
