[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SEER-PEPH"
version = "0.1.0"
description = "Bayesian spatial joint treatment-survival model for SEER-Medicare cancer data (piecewise exponential proportional hazards)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.17",
]

[project.optional-dependencies]
# pip install -e ".[inference]"
inference = [
    "numpyro>=0.15",
    "jax>=0.4",
    "jaxlib>=0.4",
]
# pip install -e ".[dev]"
dev = [
    "pytest>=8.0",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]